[tool.poetry]
name = "quiltcore"
version = "0.1.0"
description = "next-generation package manager for universal data"
authors = ["Ernest Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.7.0"
trio = "^0.22.0"
typing-extensions = "^4.6.3"
tzlocal = "^5.0.1"
un-yaml = ">=0.3.1"
# un-yaml = {git = "https://github.com/data-yaml/un-yaml.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pytest-trio = "^0.8.0"
pytest-watcher = "^0.3.2"
pytest-cov = "^4.0.0"
types-pyyaml = "^6.0.12.10"
types-tzlocal = "^5.0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
